--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.spirit-container {
+  margin: 1em;
+  display: flex;
+  justify-content: space-around;
+}
 
 
 @media only screen and (min-width: 800px) {
